--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,12 +19,13 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
-- task: NodeTaskRunnerInstaller@0
-  inputs:
-    nodeVersion: '6'
-  
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+- task: DownloadBuildArtifacts@1
+  inputs:
+    buildType: 'current'
+    downloadType: 'single'
+    downloadPath: '$(System.ArtifactsDirectory)'
